--- a/head.html
+++ b/head.html
@@ -1,2 +1,2 @@
-<?php echo "ร้านขายรองเท้า"  ; ?>
-<?php echo "โทร 090129402xx"  ; ?>
+<?php echo "ร้านขายเสื้อผ้า"  ; ?>
+<?php echo "โทร 09xxxxxxxx"  ; ?>
